[tool.poetry]
name = "jane-street-oct-22"
version = "0.1.0"
description = ""
authors = ["Sebastian Weisshaar <sebastian.v.weisshaar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
